Refactored experience timeline again (added all the fields, added some of my experiences, fixed a lot of the spacing issues that were there)

--- a/next/styles/globals.css
+++ b/next/styles/globals.css
@@ -202,7 +202,7 @@ html, body {
     width: 60%;
     margin-bottom: 50px;
 }
-.header > h1 {
+h1 {
     font-weight: 700;
     /* font-size: 3.2em; */
     margin-top: 25px;
